# gaussian-activation

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: analyze_qwen3_structure.py  exp1_baseline.py  exp2_learnable.py  exp3_depth.py  exp4_real_models.py  exp5_improved_gaussian.py  exp6_optimization.py  exp6_optimized_gaussian.py  exp7_nanogpt_gaussian.py  exp7_qwen3_gaussian.py  exp7a_nanogpt_relu.py  exp7b_nanogpt_gelu.py  exp7c_nanogpt_gaussian.py  exp8_gaussian_gate.py  exp9_sparse_gaussian_gate.py  quick_verify.py
memory/: 2026-03-19.md
notebooks/: colab_experiments.ipynb  exp1_quick_verify.ipynb  exp2_learnable.ipynb  exp3_depth.ipynb  exp4_real_models.ipynb  exp5_improved_gaussian.ipynb  exp6_optimization.ipynb  exp6_optimized_gaussian.ipynb  exp7_nanogpt_gaussian.ipynb  exp7_qwen3_gaussian.ipynb  exp7a_nanogpt_relu.ipynb  exp7a_relu_baseline.ipynb  exp7b_nanogpt_gelu.ipynb  exp7c_nanogpt_gaussian.ipynb  exp8_gaussian_gate.ipynb  exp9_sparse_gaussian_gate.ipynb
src/: __init__.py  activations.py  models.py  train.py  utils.py  visualization.py
